--- a/flask-app/mtw/templates/manage.html
+++ b/flask-app/mtw/templates/manage.html
@@ -479,7 +479,37 @@ Manage
       </div>
     </div>         
     
-       
+    <div class="row mb-4">
+      <div class="col">
+        <h5>UMLS TSV <small class="text-info">for MSSQL - includes inactive terms !</small></h5>
+
+        {% if show_marc %}
+          <form action="{{ url_for('update_stats', stat='umls_all') }}" method="post">
+            <input type="hidden" name="_csrf_token" value="{{ csrf_token() }}">
+
+            {% if exports['umls_all_tsv'] %}
+            <button class="btn btn-sm btn-info" type="submit" title="Refresh">
+              Refresh
+                </button>
+            {% else %}
+            <button class="btn btn-sm btn-success" type="submit" title="Create">
+              Generate
+                </button>
+            {% endif %}
+
+          {% if exports['umls_all_tsv'] %}
+            {% set file = exports['umls_all_tsv'] %}
+            [{{ file['fdate'] }}]
+            <a href="{{ url_for('download', fname=file['fname']) }}" title="Download file" target="_blank">
+              {{ file['fname'] }}
+            </a>
+          {% endif %}
+
+          </form>
+        {% endif %}
+      </div>
+    </div>
+
     
     
     {% endif %}
