--- a/flask-app/mtw/templates/modals/user/user_update.html
+++ b/flask-app/mtw/templates/modals/user/user_update.html
@@ -78,7 +78,7 @@
       </div>
       <div class="modal-footer">
 
-        {% if session.ugroup in ('admin','manager') %}
+        {% if session.ugroup in ['admin','manager'] %}
         <button type="button" class="btn btn-outline-warning mr-auto" id="deleteUserButton"
                 data-dismiss="modal" data-toggle="modal" data-target="#deleteUser" title=""
                 data-form="#update-user-{{ formId }}">Delete User</button>
