--- a/flask-app/mtw/templates/snips/tree-view.html
+++ b/flask-app/mtw/templates/snips/tree-view.html
@@ -13,10 +13,10 @@
     <i class="fas fa-info-circle"></i>
   </button>
 
-  <a href="{{ config.AUT_LINK }}{{ dui }}" target="_blank" title="Show Authority" role="button" class="btn btn-link">
+  <a href="{{ config.AUT_LINK }}{{ dui }}" target="_blank" rel="noopener noreferrer" title="Show Authority" role="button" class="btn btn-link">
     <i class="fas fa-link"></i></a>
 
-  <a href="{{ config.SOURCE_NS }}{{ dui }}" target="_blank" title="Show Source" role="button" class="btn btn-link">
+  <a href="{{ config.SOURCE_NS }}{{ dui }}" target="_blank" rel="noopener noreferrer" title="Show Source" role="button" class="btn btn-link">
     <i class="fas fa-external-link-alt"></i></a>
 
 </h4>
