--- a/flask-app/mtw/templates/snips/report-resolved.html
+++ b/flask-app/mtw/templates/snips/report-resolved.html
@@ -45,7 +45,7 @@
         </td>
 
         <td>
-          <a href="{{ url_for('approve', status=item.tstate, event=item.event, year=item.targetyear) }}" target="_blank" title="Approvals">
+          <a href="{{ url_for('approve', status=item.tstate, event=item.event, year=item.targetyear) }}" target="_blank" title="Approvals" rel="noopener noreferrer">
             <span class="badge badge-{{ get_statusRep(item.tstate) }}">{{ item.tstate }}</span>
           </a>
         </td>
