--- a/flask-app/application/templates/_layout.html
+++ b/flask-app/application/templates/_layout.html
@@ -142,7 +142,7 @@
   <div class="row">
     <div class="col">
       <noscript>
-      			<h3>JavaScript is not enabled. <a href="http://enable-javascript.com/" target="_blank">Please enable JavaScript</a>.</h3>
+      			<h3>JavaScript is not enabled. <a href="https://enable-javascript.com/" target="_blank">Please enable JavaScript</a>.</h3>
       </noscript>
     </div>
   </div>
