--- a/flask-app/application/templates/snips/users.html
+++ b/flask-app/application/templates/snips/users.html
@@ -1,7 +1,7 @@
 <ul class="list-inline mb-2">
-  <li class="list-inline-item mt-2"><h4>Users</h4></li>
+  <li class="list-inline-item"><h4>Users</h4></li>
   <li class="list-inline-item">
-    <button class="btn btn-primary ml-4" id="add-user" type="button" data-toggle="modal" data-target="#add-user-modal" title="Add User">
+    <button class="btn btn-primary btn-sm ml-4" id="add-user" type="button" data-toggle="modal" data-target="#add-user-modal" title="Add User">
     <i class="fas fa-plus text-info"></i></button>
   </li>
 </ul>
