--- a/flask-app/application/templates/snips/tree-view.html
+++ b/flask-app/application/templates/snips/tree-view.html
@@ -16,7 +16,7 @@
   <a href="{{ config.AUT_LINK }}{{ dui }}" target="_blank" rel="noopener noreferrer" title="Show Authority" role="button" class="btn btn-link">
     <i class="fas fa-link"></i></a>
 
-  <a href="{{ config.SOURCE_NS }}{{ dui }}" target="_blank" rel="noopener noreferrer" title="Show Source" role="button" class="btn btn-link">
+  <a href="{{ config.MESH_WEB }}{{ dui }}" target="_blank" rel="noopener noreferrer" title="Show Source" role="button" class="btn btn-link">
     <i class="fas fa-external-link-alt"></i></a>
 
 </h4>
