--- a/flask-app/application/templates/manage.html
+++ b/flask-app/application/templates/manage.html
@@ -229,11 +229,11 @@ Manage
             <div class="form-group mb-2">
               <div class="custom-control custom-radio custom-control-inline">
                 <input type="radio" id="radioMarcFormatMrc" name="line_style" value="mrk" class="custom-control-input" {{ mrk_checked }}>
-                <label class="custom-control-label" for="radioMarcFormatMrc">MarcEdit line format (MRK)</label>
+                <label class="custom-control-label" for="radioMarcFormatMrc">MarcEdit text file [_mrk]</label>
               </div>
               <div class="custom-control custom-radio custom-control-inline">
                 <input type="radio" id="radioMarcFormatLine" name="line_style" value="line" class="custom-control-input" {{ line_checked }}>
-                <label class="custom-control-label" for="radioMarcFormatLine">yaz-line format</label>
+                <label class="custom-control-label" for="radioMarcFormatLine">yaz row format [_line]</label>
               </div>
             </div>
 
@@ -246,11 +246,11 @@ Manage
             <div class="form-group mb-2">
               <div class="custom-control custom-radio custom-control-inline">
                 <input type="radio" id="radioMarcTreeDef" name="tree_style" value="def" class="custom-control-input" {{ def_checked }}>
-                <label class="custom-control-label" for="radioMarcTreeDef">Default tree (fld 072)</label>
+                <label class="custom-control-label" for="radioMarcTreeDef">Default tree 072 [.def]</label>
               </div>
               <div class="custom-control custom-radio custom-control-inline">
                 <input type="radio" id="radioMarcTreeCustom" name="tree_style" value="daw" class="custom-control-input" {{ daw_checked }}>
-                <label class="custom-control-label" for="radioMarcTreeCustom">Custom tree (fld 686)</label>
+                <label class="custom-control-label" for="radioMarcTreeCustom">Custom tree 686 [.daw]</label>
               </div>
             </div>
 
