--- a/flask-app/application/templates/_layout.html
+++ b/flask-app/application/templates/_layout.html
@@ -171,7 +171,7 @@
   <div class="row">
     <footer class="footer">
 
-        <p class="text-muted">{{ config.APP_NAME }} version {{ config.APP_VER }} {{ app_state()|upper() }}</p>
+        <p class="text-muted">{{ config.APP_NAME }} {{ config.APP_VER }} {{ app_state()|upper() }}</p>
 
     </footer>
   </div>
